--- a/adm/style/reset_reg_date.html
+++ b/adm/style/reset_reg_date.html
@@ -64,5 +64,5 @@
 {% INCLUDEJS '@david63_resetregdate/jquery-timepicker.js' %}
 {% INCLUDEJS '@david63_resetregdate/config.js' %}
 
-{% include '@david63_resetregdate/donate.html' %}
-{% include 'overall_footer.html' %}
+{% INCLUDE '@david63_resetregdate/donate.html' %}
+{% INCLUDE 'overall_footer.html' %}
