--- a/adm/style/donate.html
+++ b/adm/style/donate.html
@@ -18,8 +18,8 @@
 	</fieldset>
 </form>
 
-{% INCLUDEJS '@' ~ NAMESPACE ~ '/jquery-ui.js' %}
-{% INCLUDEJS '@' ~ NAMESPACE ~ '/jquery-timepicker.js' %}
-{% INCLUDEJS '@' ~ NAMESPACE ~ '/config.js' %}
+{% INCLUDEJS '@' ~ NAMESPACE ~ '/js/jquery-ui.js' %}
+{% INCLUDEJS '@' ~ NAMESPACE ~ '/js/jquery-timepicker.js' %}
+{% INCLUDEJS '@' ~ NAMESPACE ~ '/js/config.js' %}
 
 {% include 'overall_footer.html' %}
