--- a/adm/style/head_panel.html
+++ b/adm/style/head_panel.html
@@ -1,6 +1,6 @@
 {% include 'overall_header.html' %}
-{% INCLUDECSS '@' ~ NAMESPACE ~ '/admin_forms.css' %}
-{% INCLUDECSS '@' ~ NAMESPACE ~ '/jquery-ui.css' %}
+{% INCLUDECSS '@' ~ NAMESPACE ~ '/css/admin_forms.css' %}
+{% INCLUDECSS '@' ~ NAMESPACE ~ '/css/jquery-ui.css' %}
 
 <a name="maincontent"></a>
 
@@ -27,8 +27,14 @@
 {% endif %}
 
 {% if S_VERSION_CHECK %}
-	<div class="head-panel-version">
-		<div class="head-title">{{ lang('NEW_VERSION') }}</div>
-		<div class="head-description">{{ lang('NEW_VERSION_EXPLAIN') }}</div>
-	</div>
+	{% if S_VERSION_CHECK == 'fail' %}
+		<div class="head-panel-noversion">
+			<div class="head-description">{{ lang('NO_VERSION_EXPLAIN') }}</div>
+		</div>
+	{% else %}
+		<div class="head-panel-version">
+			<div class="head-title">{{ lang('NEW_VERSION', S_VERSION_CHECK) }}</div>
+			<div class="head-description">{{ lang('NEW_VERSION_EXPLAIN', S_VERSION_CHECK, DOWNLOAD) }}</div>
+		</div>
+	{% endif %}
 {% endif %}
