--- a/adm/style/donate.html
+++ b/adm/style/donate.html
@@ -1,19 +1,22 @@
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 	<fieldset>
-		<legend>{{ lang('DONATE') }}</legend>
+		<legend class="collapsible">{{ lang('CLICK_DONATE') }}</legend>
 
-		<dl>
-			<dt><label for="donate">{{ lang('DONATE_EXTENSIONS') }}{{ lang('COLON') }}</label><br><span>{{ lang('DONATE_EXTENSIONS_EXPLAIN') }}</span></dt>
-			<dd>
-				<div class="aligner">
-					<div class="aligner-item">
-						<input type="hidden" name="cmd" value="_s-xclick" />
-						<input type="hidden" name="hosted_button_id" value="8QF58X7DVHKJ4" />
-						<button class="paypal_btn" type="submit" name="submit" title="{{ lang('PAYPAL_TITLE') }}" alt="{{ lang('PAYPAL_BUTTON') }}" />{{ lang('DONATE') }}</button>
+		<div class="donate-content">
+			<dl>
+				<dt><label for="donate">{{ lang('DONATE_EXTENSIONS') }}{{ lang('COLON') }}</label><br><span>{{ lang('DONATE_EXTENSIONS_EXPLAIN') }}</span></dt>
+				<dd>
+					<div class="aligner">
+						<div class="aligner-item">
+							<input type="hidden" name="cmd" value="_s-xclick" />
+							<input type="hidden" name="hosted_button_id" value="8QF58X7DVHKJ4" />
+							<button class="paypal_btn" type="submit" name="submit" title="{{ lang('PAYPAL_TITLE') }}" alt="{{ lang('PAYPAL_BUTTON') }}" />{{ lang('DONATE') }}</button>
+						</div>
 					</div>
-				</div>
-			</dd>
-		</dl>
+					<img class="qrimage" src="{{ EXT_IMAGE_PATH }}/qrcode.png">
+				</dd>
+			</dl>
+		</div>
 
 	</fieldset>
 </form>
@@ -21,5 +24,5 @@
 {% INCLUDEJS '@' ~ NAMESPACE ~ '/js/jquery-ui.js' %}
 {% INCLUDEJS '@' ~ NAMESPACE ~ '/js/jquery-timepicker.js' %}
 {% INCLUDEJS '@' ~ NAMESPACE ~ '/js/config.js' %}
-
+{% INCLUDEJS '@' ~ NAMESPACE ~ '/js/donate-collapse.js' %}
 {% include 'overall_footer.html' %}
